--- a/src/Beeline/Beeline.csproj
+++ b/src/Beeline/Beeline.csproj
@@ -54,6 +54,8 @@
     <Compile Include="MethodInfoExtensions.cs" />
     <Compile Include="RouteBuilder.cs" />
     <Compile Include="RouteCollectionExtensions.cs" />
+    <Compile Include="Routing\DefaultAttribute.cs" />
+    <Compile Include="Routing\OptionalAttribute.cs" />
     <Compile Include="Routing\RouteAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
