--- a/tests/Beeline.Tests/Beeline.Tests.csproj
+++ b/tests/Beeline.Tests/Beeline.Tests.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\RouteExtensions.cs" />
-    <Compile Include="RoutingSpecs.cs" />
+    <Compile Include="RouteSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\SystemWebStubs.cs" />
   </ItemGroup>
