--- a/tests/Beeline.Tests/Beeline.Tests.csproj
+++ b/tests/Beeline.Tests/Beeline.Tests.csproj
@@ -52,7 +52,7 @@
     <Compile Include="RouteExtensions.cs" />
     <Compile Include="Specs\RouteSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Specs\UrlParameterSpecs.cs" />
+    <Compile Include="Specs\UrlParamSpecs.cs" />
     <Compile Include="SystemWebStubs.cs" />
     <Compile Include="RoutingSpecContext.cs" />
   </ItemGroup>
